# sfdc-contacts-extractor

./: .gitignore  README.md  config.yaml  env-sample  pyproject.toml
salesforce_extractor/: __main__.py  config.py  extractor.py
